[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Game/Main.gd" type="Script" id=1]
[ext_resource path="res://src/GUI/GUILayer.gd" type="Script" id=2]
[ext_resource path="res://src/GUI/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Galaxy/Galaxy.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/GUI/OutlinerGUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Game/SolarSystems.gd" type="Script" id=6]
[ext_resource path="res://src/Game/Camera2D.tscn" type="PackedScene" id=7]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Galaxy" parent="." instance=ExtResource( 4 )]

[node name="SolarSystems" type="Node" parent="."]
script = ExtResource( 6 )

[node name="GUILayer" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="MainMenu" parent="GUILayer" instance=ExtResource( 3 )]
visible = false

[node name="Outliner" parent="GUILayer" instance=ExtResource( 5 )]
show_behind_parent = true
anchor_left = 0.8

[node name="Camera2D" parent="." instance=ExtResource( 7 )]
[connection signal="object_selected" from="GUILayer/Outliner" to="." method="_on_Outliner_object_selected"]
